# law-scraping-system

./: .gitignore  Dockerfile  Dockerfile.draft  HANDOVER_REPORT.md  README.md  check_chroma_laws.py  check_sqlite.py  content_report.txt  db_laws_utf8.txt  db_laws_utf8_v2.txt  debug_content.py  debug_imports.py  debug_obs_law.py  debug_ranking.py  exact_names_utf8.txt  export_vectors.py  find_law_ids.py  found_ids.txt  ids.txt  inspect_names.py  pyproject.toml  sqlite_report.txt  start_app.py  validate_ids.py  verify_logic.py  welfare_laws_v3.db
.streamlit/: config.toml
backend/: Cargo.toml  build_log.txt  error.txt  log.txt  log2.txt
backend/src/: gemini.rs  guardrails.rs  main.rs  models.rs  static_data.rs
chroma_db/: chroma-collections.parquet
chroma_db/index/: id_to_uuid_aaf3f78b-977c-48f4-bd8e-04bca0f99ce8.pkl  index_metadata_aaf3f78b-977c-48f4-bd8e-04bca0f99ce8.pkl  uuid_to_id_aaf3f78b-977c-48f4-bd8e-04bca0f99ce8.pkl
src/core/: models.py
src/infrastructure/: database.py  egov_api.py
src/interface/: app.py  populate_db.py
src/interface/assets/: custom.css
src/law_scraping_system.egg-info/: PKG-INFO  SOURCES.txt
src/rag_engine/: __init__.py  config.py  embedder.py  indexer.py  vector_store.py
